test composant